# Cellular_Automata

./: .clang  .cproject  .gitignore  .project  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile.mingw  README.md  autorun.lua  config.lua
lua/include/: luaconf.h
src/: CMakeLists.txt  Config.h  Config.h.in  LuaHelper.cpp  LuaHelper.h  Main.cpp  Rulestring.h  Tempvars.cpp  Tempvars.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h
stamps/: beacon.ca  boat.ca  gggun.ca  glider.ca  lwss.ca  pendeca.ca  pulsar.ca  toad.ca  tub.ca
